--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,12 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+play.http.secret.key = "changed"
+
+play.application.loader = init.MyApplicationLoader
+
+filters {
+  accesslog {
+    excludedHeaders = []
+    excludedPaths = []
+  }
+}
