attempt to add requestId to context

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,8 +11,8 @@ filters {
   }
 }
 
-kamon.context.codecs {
-  string-keys {
-    request-id = "X-Request-ID"
-  }
-}
+//kamon.context.codecs {
+//  string-keys {
+//    request-id = "X-Request-ID"
+//  }
+//}
