integrate request-id propagation via custom context codec

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,8 +11,9 @@ filters {
   }
 }
 
-//kamon.context.codecs {
-//  string-keys {
-//    request-id = "X-Request-ID"
-//  }
-//}
+kamon.context.codecs {
+  http-headers-keys {
+    request-id = "util.RequestIdCodec"
+    span = "util.NoopCodec" // disable b3 header propagation for now
+  }
+}
