cleanup and add application.local.conf override

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,6 @@ filters {
 kamon.context.codecs {
   http-headers-keys {
     request-id = "util.RequestIdCodec"
-    span = "util.NoopCodec" // disable b3 header propagation for now
+    //span = "util.NoopCodec" // disable b3 header propagation for now
   }
 }
